--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -4,3 +4,12 @@
 <p>Genre: <%= @movie.genre %></p>
 <p>Actors: <%= @movie.stars %></p>
 <p>Average Actor Age: <%= @movie.actors.average_age %></p>
+
+<h2>Add an Actor</h2>
+<p>
+<%= form_tag("/movies/#{@movie.id}/actors") do %>
+<%= label_tag :name %>
+<%= text_field_tag :name %>
+<%= submit_tag "Add Actor" %>
+<% end %>
+</p>
